# bhai_jaan_academy

./: .gitignore  README.md  dev.sh  netlify.toml  render.yaml
.github/workflows/: daily_report_scheduler.yml  deploy.yml
backend/: GITHUB_SYNC_SETUP.md  env.example  html_generation.py  main.py  netlify_client.py  pyproject.toml  report_scheduler_utils.py  response_storage.py  scheduler.py  setup_github_sync.sh  supabase_client.py  users.json
backend/config/: __init__.py  constants.py  settings.py
backend/data/: __init__.py  base_repository.py  context_repository.py  report_repository.py  response_repository.py  user_repository.py
backend/report_uploads/: github_report_uploader.py
backend/services/: __init__.py  ai_service.py  context_service.py  discord_service.py  email_service.py  github_sync_service.py  notification_service.py  payment_service.py  report_service.py  user_service.py
backend/system_status_reports/: README.md  __init__.py  message_builder.py
backend/templates/: report_email.html  welcome_email.html
backend/utils/: email_utils.py
frontend/: constants.js  index.html  legal.html  script.js  styles.css
reports/akashadroitsinghgmailcom/quantum_computing/: classical_vs_quantum_computing_response.json
