[project]
name = "bhai-jaan-academy-backend"
version = "0.1.0"
description = "Backend API for Bhai Jaan Academy learning platform"
authors = [
    {name = "Bhai Jaan Academy", email = "team@bhaijaanacademy.com"}
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "pydantic==2.4.2",
    "httpx==0.24.1",
    "email-validator==2.1.0",
    "requests==2.31.0",
    "openai==1.3.0",
    "supabase==2.1.0"
]
requires-python = ">=3.10,<3.13" 